# FEGS

./: .gitignore  pyproject.toml  readme.md
FEGS/: FEGS.py  M.npy  example.py
